intial background-setup-completed #2

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/scss/main.scss">
-    <title>Boostrap Designs</title>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <title>Journey</title>
   </head>
   <body>
-
+   <h1 class="text-color"><strong>Where Spirituality Begins!</strong></h1>
+   <div class="bar"></div>
   </body>
   <script type="module" src="./assets/js/main.js"></script>
 </html>
