--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,307 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./assets/scss/main.scss">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <title>Journey</title>
-  </head>
-  <body>
-   <h1 class="text-color"><strong>Where Spirituality Begins!</strong></h1>
-   <div class="bar"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./assets/scss/main.scss" />
+  <title>Frondend Bootcamp</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-3 fixed-top">
+    <div class="container">
+      <a href="#" class="navbar-brand">Frondend Bootcamp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li href="#learnsection" class="nav-item"><a class="nav-link">Learn</a></li>
+          <li href="#question" class="nav-item"><a class="nav-link">Questions</a></li>
+          <li href="#instruction" class="nav-item"><a class="nav-link">Instructions</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--showcase- flex-->
+  <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+          <h1>Become <span class="text-warning">A Web Developer</span></h1>
+          <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sit aperiam iure! Laborum
+            impedit soluta similique ut reprehenderit voluptate eum quia, ullam veniam maiores, expedita, a eveniet
+            tempore delectus odio?</p>
+          <button data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary bt-lg">Enroll
+            Now</button>
+        </div>
+        <img class="img-fluid w-50 d-none d-sm-block" src="/src/assets/img/showcase.svg" alt="shocase">
+      </div>
+    </div>
+  </section>
+  <!--news LIbery-- flex-->
+  <section class="bg-primary text-light p-5">
+    <div class="container">
+      <div class="d-md-flex justify-content-between align-item-center">
+        <h3 class="mb-3 b-md-0">Sign up for News letter</h3>
+        <div class="input-group w-50 news-input">
+          <input type="text" class="form-control" placeholder="Enter Email">
+          <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Submit</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--read section-- grid-->
+  <section class="p-5">
+    <div class="container">
+      <div class="row text-center g-4">
+        <div class="col-md">
+          <div class="card bg-dark text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-laptop"></i>
+              </div>
+              <h3 class="card-title mb-3">Virtual</h3>
+              <p class="card-text justify-cont">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda .
+              </p>
+              <a href="#" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card bg-secondary text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-person-square"></i>
+              </div>
+              <h3 class="card-title mb-3">Hybrid</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda .
+              </p>
+              <a href="#" class="btn btn-dark">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card bg-dark text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-people"></i>
+              </div>
+              <h3 class="card-title mb-3">In-person</h3>
+              <p class="card-text justify-cont">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda .
+              </p>
+              <a href="#" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="learnsection" class="p-5">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md">
+          <img src="/src/assets/img/fundamentals.svg" alt="" class="img-fluid">
+        </div>
+        <div class="col-md p-5">
+          <h2>Learn The fundamentals</h2>
+          <p class="lead">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia nulla quibusdam, nobis magnam magni
+            placeat?
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae culpa ipsum recusandae amet magni
+            officia ex veniam autem quasi nisi, corrupti quam praesentium illum, minima dicta tenetur reiciendis
+            necessitatibus laudantium!</p>
+          <a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right">Learn More</i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!---questions-->
+  <section class="p-5 p-sm-2">
+    <div class="container">
+      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              What your Name ?
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+              <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Where are you from ?
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+              <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
+              filled with some actual content.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              No more questions
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+              <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+              happening here in terms of content, but just filling up the space to make it look, at least at first
+              glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="instructor" class="p-5 bg-primary">
+    <div class="container">
+      <h2 class="text-center text-white">Course Instructors</h2>
+      <p class="lead text-center text-white mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga
+        quas illum rem autem, repudiandae pariatur consequuntur optio </p>
+      <div class="row g-4">
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title mb-3">John dee</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id delectus iusto corporis deserunt distinctio
+                qui earum nemo hic aliquid! Nisi exercitationem, aspernatur deserunt qui assumenda illum corporis harum
+                natus iusto?
+              </p>
+              <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/men/14.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title mb-3">John dicruz</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id delectus iusto corporis deserunt distinctio
+                qui earum nemo hic aliquid! Nisi exercitationem, aspernatur deserunt qui assumenda illum corporis harum
+                natus iusto?
+              </p>
+              <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title mb-3">John see</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id delectus iusto corporis deserunt distinctio
+                qui earum nemo hic aliquid! Nisi exercitationem, aspernatur deserunt qui assumenda illum corporis harum
+                natus iusto?
+              </p>
+              <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title mb-3">Jay</h3>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id delectus iusto corporis deserunt distinctio
+                qui earum nemo hic aliquid! Nisi exercitationem, aspernatur deserunt qui assumenda illum corporis harum
+                natus iusto?
+              </p>
+              <a href=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <a href=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--contact and map-->
+  <section class="p-5">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md">
+          <h2 class="text-center mb-4">Contact Info</h2>
+          <ul class="list-group-flush list-group lead">
+            <li class="list-group-item">
+              <span class="fw-bold">Address</span>: dff dfkjf sdsa
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Address</span>: dff dfkjf sdsa
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Address</span>: dff dfkjf sdsa
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Address</span>: dff dfkjf sdsa
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <div id="map"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="p-5 bg-dark text-white text-center position-relative">
+    <div class="container">
+      <p class="lead">Copyright &copy; 2023 Frontend Bootcamp</p>
+      <a href="" class="postion-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h1"></i>
+      </a>
+    </div>
+  </footer>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script type="module" src="./assets/js/main.js"></script>
+</body>
+
 </html>
